@@ -9,7 +9,14 @@ public class Otherclass {
        //System.out.println("s3.equals(s1) = " + s3.equals(s1));
         Integer a = null;
 
-        System.out.println("new Boolean(\"true\") = " + new Boolean("ali"));
-        System.out.println("new Boolean(Boolean.valueOf(\"true\")) = " + new Boolean(Boolean.valueOf("trUE")));
+      //  System.out.println("new Boolean(\"true\") = " + new Boolean("True"));
+     //   System.out.println("new Boolean(Boolean.valueOf(\"true\")) = " + new Boolean(Boolean.valueOf("trUE")));
+
+
+        Boolean x = new Boolean("TrUE");
+
+        if (x){
+            System.out.println("x true.dur");
+        }
     }
 }
